syntax = "proto3";

package qqmsg;

// 一条消息
message Message {
  string text = 1;                        // 消息正文
  repeated Image images = 2;              // 图片
  repeated Face faces = 3;                // 表情/表情包
  int64 time = 4;                         // 时间戳
  string senderUin = 5;                   // 发送者 UIN
  string msgId = 6;                       // 消息唯一 ID
  string subType = 7;                     // 子类型
  // 可能还有其他字段（例如群号、消息来源等）
}

// 图片消息
message Image {
  string filePath = 1;                    // 本地路径
  string imageUrl = 2;                    // 下载 URL
  string imageUuid = 3;                   // UUID
  string imageMd5 = 4;                    // MD5 校验
  int32 width = 5;                        // 宽
  int32 height = 6;                       // 高
  string subtype = 7;                     // 图片子类型
}

// 表情/face
message Face {
  int32 faceId = 1;                       // 表情 ID
  bool isLargeFace = 2;                   // 是否大表情
  string sysFaceEntry = 3;                // 系统表情标识
}

// Realm 存储的封装
message RealmMessage {
  Message message = 1;
  // QQ 可能还会存一些 metadata
}
